# type_reg

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  coverage.sh  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
examples/: simple.rs  tagged_deserialize_map.rs  tagged_deserialize_single.rs  tagged_serialize.rs  untagged_deserialize_map.rs  untagged_deserialize_single.rs  untagged_serialize.rs
src/: common.rs  data_type.rs  de.rs  lib.rs  tagged.rs  type_map.rs  type_name_lit.rs  type_reg.rs  untagged.rs
src/common/: unknown_entries.rs
src/de/: type_map_visitor.rs  type_seed.rs  type_seed_factory.rs
src/tagged/: data_type.rs  type_map.rs  type_map_visitor.rs  type_reg.rs
src/untagged/: box_data_type_downcast.rs  box_dt.rs  box_dt_display.rs  data_type.rs  data_type_display.rs  data_type_wrapper.rs  from_data_type.rs  into_box_data_type.rs  type_map.rs  type_map_opt.rs  type_map_opt_visitor.rs  type_map_visitor.rs  type_reg.rs  unknown_entries_some_fn_seed.rs
