[package]
name = "type_reg"
version = "0.3.1"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2021"
description = "Serializable map of any type."
repository = "https://github.com/azriel91/type_reg"
documentation = "https://docs.rs/type_reg/"
readme = "README.md"
keywords = ["serializable", "type", "registry"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
downcast-rs = "1.2.0"
dyn-clone = "1.0.4"
erased-serde = "0.3.18"
indexmap = { version = "1.8.0", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_tagged = "0.2.0"

[dev-dependencies]
serde_yaml = "0.9.11"

[[example]]
name = "tagged_serialize"
required-features = ["tagged"]

[[example]]
name = "tagged_deserialize_single"
required-features = ["tagged"]

[[example]]
name = "tagged_deserialize_map"
required-features = ["tagged"]

[[example]]
name = "untagged_serialize"
required-features = ["untagged"]

[[example]]
name = "untagged_deserialize_single"
required-features = ["untagged"]

[[example]]
name = "untagged_deserialize_map"
required-features = ["untagged"]

[features]
default = []
debug = []
ordered = ["indexmap", "indexmap/serde-1"]
tagged = []
untagged = []
