[package]
name = "type_reg"
version = "0.6.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2021"
description = "Serializable map of any type."
repository = "https://github.com/azriel91/type_reg"
documentation = "https://docs.rs/type_reg/"
readme = "README.md"
keywords = ["serializable", "type", "registry"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
downcast-rs = "1.2.0"
dyn-clone = "1.0.11"
erased-serde = "0.3.25"
indexmap = { version = "2.0.0", optional = true }
resman = { version = "0.16.1", optional = true }
serde = { version = "1.0.164", features = ["derive"] }
serde_tagged = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"

[dev-dependencies]
serde_yaml = "0.9.22"
serde_json = "1.0.99"

[[example]]
name = "tagged_serialize"
required-features = ["tagged"]

[[example]]
name = "tagged_deserialize_single"
required-features = ["tagged"]

[[example]]
name = "tagged_deserialize_map"
required-features = ["tagged"]

[[example]]
name = "untagged_serialize"
required-features = ["untagged"]

[[example]]
name = "untagged_deserialize_single"
required-features = ["untagged"]

[[example]]
name = "untagged_deserialize_map"
required-features = ["untagged"]

[features]
default = []
debug = ["resman?/debug"]
ordered = ["indexmap", "indexmap/serde"]
tagged = []
untagged = []
resman = ["dep:resman"]
